@@ -3,3 +3,5 @@ __pycache__/
 data/*
 newdata/
 *.mcpack
+*.zip
+tmp/
